# mozc-wai

.github/workflows/: release.yml
src/base/container/: arena.h
src/converter/: BUILD.bazel  converter.cc  converter.h  converter_test.cc
src/dictionary/: user_dictionary.cc  user_dictionary_test.cc  user_pos.cc  user_pos.h  user_pos_test.cc
src/engine/: BUILD.bazel
src/prediction/: predictor.cc  predictor.h  predictor_interface.h  user_history_predictor.cc  user_history_predictor.h  user_history_predictor_test.cc
src/protocol/: commands.proto
src/session/: BUILD.bazel
src/wai/: BUILD.bazel  NOTICE.txt  README.md
