# WritingAssistantIME 用の集約 Bazel ターゲット。
#
# 設計書: <owner>/WritingAssistantIME docs/design-doc/202605-006_mozc-integration §2.5

load("//:build_defs.bzl", "mozc_cc_library")

package(default_visibility = ["//visibility:public"])

# WritingAssistantIME から呼び出す Mozc 変換エンジンの集約。
# Swift から Obj-C++ ブリッジ越しに使うのは:
#   - SessionHandler（//session 内）
#   - OssEngineFactory（//engine 内）
#   - Converter（//converter 内）
#   - OssDataManager（//data_manager/oss 内）
#
# upstream 4 package の visibility には `//wai:__pkg__` を追加済み。
mozc_cc_library(
    name = "mozc_wai_engine_deps",
    deps = [
        "//converter",
        "//data_manager/oss:oss_data_manager",
        "//engine:oss_engine_factory",
        "//session",
    ],
)

# 単一の静的ライブラリ libmozc_wai.a は `:mozc_wai_engine_deps` をビルドした後、
# release.yml 内で `libtool -static` を使って bazel-bin の .a を結合して生成する。
# （Bazel 9 で `cc_static_library` が削除されたため、Bazel ルールではなく
#   ワークフロー側で .a を組み立てる）
